feat(§trade-pool §vanilla-stock §tackle-craft): 3 offers/level, guaranteed starter fish
Four playtest asks, in order.

1. Level 1 now ALWAYS buys a common fish. Vanilla's draw is pure chance, so a
   fresh stall could come up gear-only — and that first emerald for a bleak is
   the whole point of the profession. After vanilla fills level 1, if no offer
   takes a fish, one is swapped in, rolled among the four smalls the community
   guide calls ubiquitous (bleak, roach, gudgeon, rotan) so the guarantee is
   reachable wherever the player spawned.

2. Three offers per level instead of two. Vanilla bakes TRADES_PER_LEVEL into
   the addOffersFromItemListings call with no API to raise it per profession,
   so a common mixin on Villager.updateTrades tops our fisherman up at TAIL —
   one method name, no descriptor to match, and every other profession returns
   immediately. Verified the target resolves: loom's refmap maps updateTrades
   to class_1646.method_7237()V for Fabric, and NeoForge runs Mojang names
   directly. Both jars build.

   Pools are now 10/10/7/14/12 against 3 draws: expected fish offers on a maxed
   fisherman ~3.0 of 15 (20%), expected rod offers on L5 0.75.

3. The stall carries vanilla stock where it serves the mod's own crafting:
   string (every reeled rod recipe now wants it for guide wraps and it is a
   miserable early grind), an oak boat (trolling needs one under you), and the
   two saltwater gate inputs — prismarine shards on L4, a nautilus shell on L5.
   That keeps the ocean gate priced without hinging it on guardian RNG.
   item() now accepts full ids, not just mod paths.

4. Shop tackle is BENCH tackle. An unstamped lure carries no TackleWeightG, so
   RigData.lureTackleWeightG read 0 g and a bought spinner cast like nothing
   while a station-tied one of the same name had real mass. Everything the
   Tackle Station can tie now leaves the stall with the same stamp the station
   writes — lures sold loose, and the rigs inside the assemb